<resources>
    <string name="app_name">GithubUser</string>
    <string name="username">UserName</string>
    <string name="search_hint">Search Github User</string>
    <string name="name">name</string>
    <string name="following">%d Following</string>
    <string name="followers">%d Followers</string>
    <string name="tab_name_1">Followers</string>
    <string name="tab_name_2">Following</string>
    <string name="user_not_found">User Not Found</string>
    <string name="avatar_profile_picture">Avatar Profile Picture</string>
</resources>